--- a/style_reservia.css
+++ b/style_reservia.css
@@ -705,13 +705,49 @@
         padding: 0 3.5vw 0 3.5vw;
     }
 
+            /*Aside*/
+    .pop{
+        margin: 0 0 50px 0;
+        padding: 0 3.5vw 30px 3.5vw;
+    }
+    .div_pop_h2{
+        width: 42%;
+    }
+    .aside_cards{
+        width: 40%;
+    }
 
+
+
+            /*Article*/
+    .hebergement{
+        margin: 0;
+        justify-content: center;
+        padding: 0 2vw 50px 2vw;
+        max-width: 100%;
+    }
+
+    .article_cards{
+        width: 28%;
+    }
+
+
+            /*activités*/
+    
+    .section_activités{
+        
+        margin: 50px auto 50px auto;
+    }
+
+    .activites_a{
+    }
 
             /*Footer*/
 
     .div_footer{
         flex-direction: column;
         justify-content: center;
+        padding: 35px 3.5vw 35px 3.5vw;
     }
 
     .ul_footer{
