--- a/style_reservia.css
+++ b/style_reservia.css
@@ -148,6 +148,11 @@
     padding: 45px 0 0 0;
 }
 
+.sinscrire:hover{
+    border-top: none;
+    padding: 47px 0 0 0;
+}
+
 .inscription{
     color: #0065fc;
     text-decoration: none;
@@ -322,7 +327,7 @@
     align-items: center;
     background-color: #f2f2f2 ;
     border-radius: 25px;
-    min-width: 31%;
+    min-width: 32%;
 }
 
 
@@ -405,7 +410,7 @@
 .div_article{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .article_cards{
     display: flex;
@@ -464,7 +469,7 @@
 }
 
 .div_afficher_plus{
-    margin: 15px 0 0 30px;
+    margin: 15px 0 30px 30px;
 }
 
 
