--- a/style_reservia.css
+++ b/style_reservia.css
@@ -518,6 +518,7 @@
     box-shadow: 2px 2px 10px #f2f2f2;
     border-radius: 20px;
     transition: 0.5s;
+    text-decoration: none;
 }
 
 .activite_gd_format:hover{
@@ -535,6 +536,7 @@
     border-radius: 20px;
     padding-bottom: 50px;
     transition: 0.5s;
+    text-decoration: none;
 }
 
 .activites_petit_format:hover{
@@ -544,7 +546,7 @@
 
 /*figure href activités*/
 
-.activites_a{
+.activites_figure{
     text-decoration:none;
     color: black;
 }
@@ -759,7 +761,7 @@
         margin-bottom: 15px;
     }
 
-    .activites_a{
+    .activites_figure{
         width: 300px;
     }
 }
@@ -1055,7 +1057,7 @@
             width: 95%;
         }
 
-        .activites_a{
+        .activites_figure{
             width: 100%;
         }
 
