margin div_activités

--- a/style_reservia.css
+++ b/style_reservia.css
@@ -1036,7 +1036,7 @@
         }
 
         .div_activites{
-            margin-left: 5vw;
+            margin: 0 0 0 5vw;
         }
 
         .groupe_3act{
