--- a/style_reservia.css
+++ b/style_reservia.css
@@ -391,9 +391,12 @@
 
 .info_cards_aside{
     display: block;
-    padding: 0.75em 0 1em 1em;
+    padding: 0.75em 1em 1em 1em;
 }
 
+.etoiles_asi{
+    padding: 5px 0 0 15px;
+}
 
 
 /*Article*/
@@ -424,7 +427,6 @@
     padding: 5px 5px 15px 5px;
     border-radius: 25px;
     width: 240px;
-    height: 180px;
     margin: 3.5px 0 18px 0;
     box-shadow: 2px 2px 15px #d9d9d9;
     transition: 0.5s;
@@ -450,11 +452,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 0 15px;
 }
 
 .info_cards_article{
     display: block;
-    padding: 5px 0 0 15px;
+    padding: 5px 0 0 0;
 }
 
 .article_tarifs{
@@ -464,7 +467,7 @@
 }
 
 .etoiles_art{
-    padding: 5px 0 0 15px;
+    padding: 5px 0 0 0;
 }
 
 .afficher_plus{
@@ -514,6 +517,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin: 0 0 0 46px;
+    flex: 1;
 }
 
 .activite_gd_format{
@@ -523,6 +527,7 @@
     border-radius: 20px;
     transition: 0.5s;
     text-decoration: none;
+    flex: 1;
 }
 
 .activite_gd_format:hover{
@@ -531,6 +536,7 @@
 
 .div_2e_gd_format{
     margin: 0 0 0 47px;
+    flex: 1;
 }
 
 .activites_petit_format{
@@ -894,14 +900,14 @@
     .ul_li_ancre{
         border-top: none;
         border-bottom: solid 2px #f2f2f2;
-        padding: 43px 0 15px 0;
+        padding: 23px 0 15px 0;
         box-sizing: border-box;
     }
 
     .ul_li_ancre:hover{
         border-top: none;
         border-bottom: solid 2px #0065fc;
-        padding: 43px 0 15px 0;
+        padding: 23px 0 15px 0;
         font-weight: bold;
         box-sizing: border-box;
     }
@@ -934,7 +940,7 @@
     }
 
     #icone_reservia{
-        margin: 43px 28px 29px 5vw;
+        margin: 43px 28px 0 5vw;
     }
 
 
@@ -967,8 +973,7 @@
     }
 
     .span_boutton{
-        position: absolute;
-        left: 230px;
+        margin-left: -5px;
     }
 
     .boutton_rechercher{
